# cringe

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.cc  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tailwind.css
.github/workflows/: deploy.yml
assets/: bots.yaml
migrations/: 00-schema.sql  20260318100220_init.sql  20260327193523_mod prompts, pictures and decisions.sql  20260404101500_drop_user_images_mime_type.sql  20260420233600_kids_revision.sql  20260421130500_habits renames.sql  20260421140900_gender enums extended.sql  20260421180800_gender enums utilized in tbl users.sql
public/: bots.yaml  manifest.json
src/: auth.rs  db.rs  main.rs  navbar.rs  router.rs  utils.rs
src/auth/: mod.rs  providers.rs
src/modal/: builder.rs  components.rs  mod.rs
src/models/: family_plans.rs  frequency.rs  gender.rs  image.rs  kids.rs  mod.rs  person.rs  profile.rs  relationship_type.rs  seeking.rs  zodiac_sign.rs
src/state/: client.rs  crud_query.rs  gps.rs  mod.rs  server.rs  websocket.rs
src/state/client/: gps.rs  mod.rs
src/state/details/: mod.rs  server.rs
src/state/image/: converter.rs  mod.rs  ops.rs
src/state/prompt/: crud.rs  mod.rs
src/state/server/: bots.rs  img.rs  mod.rs  websocket.rs
src/state/server/img/: converter.rs  mod.rs
src/state/websocket/: mod.rs  ops.rs  server.rs
src/views/: about.rs  login.rs  mod.rs  protector.rs
src/views/me/: basic.rs  core.rs  mod.rs
src/views/people/: listing.rs  mod.rs  person.rs
src/views/people/person/: adder.rs  button.rs  container.rs  despair.rs  img.rs  mod.rs  personal_data.rs  prompt.rs  svg_quote_mark.rs  utils.rs
src/views/people/person/buttons/: dislike.rs  like.rs  mod.rs  skip.rs
src/views/people/person/details/: habits.rs  kids.rs  mod.rs  occupation.rs  relationship_type.rs  seeking.rs
src/views/people/person/details/habits/: drinking.rs  drugs.rs  marijuana.rs  mod.rs  smoking.rs
src/views/people/person/details/kids/: has.rs  mod.rs  wants.rs
src/views/people/person/image/: editor.rs  masterpiece.rs  mod.rs  ribbon.rs
src/views/people/person/prompt/: editor.rs  mod.rs
src/views/people/profile/: button.rs  container.rs  mod.rs  utils.rs
src/views/people/profile/details/: dropdowns.rs  education.rs  family_plans.rs  gender.rs  gender_identity.rs  habits.rs  has_children.rs  height.rs  hometown.rs  location.rs  mod.rs  name.rs  occupation.rs  relationship_type.rs  seeking.rs
src/views/people/profile/details/habits/: generic.rs  marijuana.rs  mod.rs  smoking.rs
src/views/people/profile/details/kids/: has.rs  mod.rs  wants.rs
src/views/people/profile/image/: editor.rs  mod.rs
src/views/people/profile/prompt/: editor.rs  mod.rs
tests/: example.spec.ts
