[package]
name = "cringe"
version = "0.2.11"
authors = ["Tamás Tóth <tomjtoth@gmail.com>"]
edition = "2021"

# See more keys and their definit^ions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["blocking"] }
