[package]
name = "cringe"
version = "0.6.0"
authors = ["Tamás Tóth <tomjtoth@gmail.com>"]
edition = "2021"

# See more keys and their definit^ions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.102", optional = true }
axum = { version = "0.8.8", optional = true }
axum-extra = { version = "0.12.5", features = [
    "typed-header",
], optional = true }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
dotenvy = { version = "0.15.7", optional = true }
futures = "0.3.32"
http = { version = "1.4.0", optional = true }
oauth2 = { version = "5.0.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9", optional = true }
sqlx = { version = "0.8.6", optional = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
] }
wasm-bindgen = { version = "0.2.114", optional = true }
web-sys = { version = "0.3.91", optional = true, features = [
    "Geolocation",
    "GeolocationCoordinates",
    "GeolocationPosition",
    "GeolocationPositionError",
    "Navigator",
    "Window",
] }
tracing-wasm = { version = "0.2", optional = true }
tracing-subscriber = "0.3"
once_cell = { version = "1.21", optional = true }
serde_json = "1.0.149"
strum = { version = "0.28.0", optional = true }
strum_macros = { version = "0.28.0", optional = true }
image = { version = "0.25.10", optional = true }
tokio = { version = "1.51.0", optional = true, features = ["rt"] }

[features]
default = ["web"]
web = ["dioxus/web", "dep:web-sys", "dep:wasm-bindgen", "dep:tracing-wasm"]

server = [
    "dioxus/server",
    "dep:tokio",
    "dep:serde_yaml",
    "dep:strum",
    "dep:strum_macros",
    "dep:image",
    "dep:anyhow",
    "dep:axum",
    "dep:axum-extra",
    "dep:dotenvy",
    "dep:http",
    "dep:oauth2",
    "dep:sqlx",
    "dep:once_cell",
]

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["blocking"] }
