[package]
name = "cringe"
version = "0.7.10"
authors = ["Tamás Tóth <tomjtoth@gmail.com>"]
edition = "2021"

# See more keys and their definit^ions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["."]

[workspace.dependencies]
oauth2 = "5.0.0"

[features]
default = ["web"]
web = [
    "dioxus/web",
    "dep:gloo-timers",
    "dep:js-sys",
    "dep:wasm-bindgen-futures",
    "dep:wasm-bindgen",
    "dep:web-sys",
]

server = [
    "dioxus/server",
    "dep:anyhow",
    "dep:axum-extra",
    "dep:axum",
    "dep:dotenvy",
    "dep:image",
    "dep:oauth2",
    "dep:once_cell",
    "dep:serde_yaml",
    "dep:sqlx",
    "dep:tokio",
]

[dependencies]
anyhow = { version = "1.0.102", optional = true }
axum = { version = "0.8.8", optional = true }
axum-extra = { version = "0.12.5", features = [
    "typed-header",
], optional = true }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
dotenvy = { version = "0.15.7", optional = true }
futures = "0.3.32"
gloo-timers = { version = "0.4.0", optional = true, features = ["futures"] }
image = { version = "0.25.10", optional = true }
js-sys = { version = "0.3.94", optional = true }
oauth2 = { workspace = true, optional = true }
once_cell = { version = "1.21", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { version = "0.9", optional = true }
sqlx = { version = "0.8.6", optional = true, features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio-rustls",
] }
strum = "0.28.0"
strum_macros = "0.28.0"
tokio = { version = "1.51.0", optional = true, features = ["rt"] }
wasm-bindgen = { version = "0.2.114", optional = true }
wasm-bindgen-futures = { version = "0.4.67", optional = true }
web-sys = { version = "0.3.91", optional = true, features = [
    "CanvasRenderingContext2d",
    "Document",
    "Geolocation",
    "GeolocationCoordinates",
    "GeolocationPosition",
    "GeolocationPositionError",
    "HtmlCanvasElement",
    "ImageBitmap",
    "Navigator",
    "Window",
] }

[dev-dependencies]
oauth2 = { workspace = true, features = ["reqwest-blocking"] }
